--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     font-family: 'Hind', sans-serif;
     font-size: 18px;
     position: relative;
+    overflow: hidden;
 }
 h1{
     margin-top: 2%;
